--- a/upApp/app/src/main/AndroidManifest.xml
+++ b/upApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.upapp">
+    package="com.example.upapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,13 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+        android:theme="@style/AppTheme" >
+        <activity android:name=".ViewUserActivity" >
+        </activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".ui.login.ProfileActivity" />
         <activity android:name=".ui.login.SegundoActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
