--- a/upApp/app/src/main/AndroidManifest.xml
+++ b/upApp/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity android:name=".ViewUserActivity" >
         </activity>
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".Edit_Activity"></activity>
+        <activity android:name=".DetailActivity" />
         <activity android:name=".ui.login.ProfileActivity" />
         <activity android:name=".ui.login.SegundoActivity" />
         <activity
